# libbwa

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  bwa.c  bwape.c  bwape.h  bwase.h  bwt_gen.c  bwtaln.h  bwtindex.c  bwtindex.h  bwtsw2.h  bwtsw2_aux.c  libbwa.c  libbwa.h  libbwa_aln.c  libbwa_bwtgen.c  libbwa_fa2pac.c  libbwa_fastmap.c  libbwa_index.c  libbwa_mem.c  libbwa_pac2bwt.c  libbwa_sampe.c  libbwa_samse.c  libbwa_sw.c  test.c
